--- a/Ackeron_Back/Ackeron_Back.csproj
+++ b/Ackeron_Back/Ackeron_Back.csproj
@@ -14,7 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BLL\BLL.csproj" />
     <ProjectReference Include="..\DAL\DAL.csproj" />
-    <ProjectReference Include="..\ToolBox\ToolBox.csproj" />
+    <ProjectReference Include="..\Tool\Tool.csproj" />
   </ItemGroup>
 
 </Project>
