--- a/Ackeron_Back/Ackeron_Back.csproj
+++ b/Ackeron_Back/Ackeron_Back.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Tool\Tool.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
