--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -73,6 +73,8 @@
     <Compile Include="Models\CharacterResist.cs" />
     <Compile Include="Models\CharacterStat.cs" />
     <Compile Include="Models\CharacterLoc.cs" />
+    <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\Spell.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CharacterRepo.cs" />
   </ItemGroup>
