--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Models\CharacterStat.cs" />
     <Compile Include="Models\CharacterLoc.cs" />
     <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\Quest.cs" />
     <Compile Include="Models\Spell.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CharacterRepo.cs" />
