--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -67,17 +67,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\ICharacterRepo.cs" />
+    <Compile Include="Interfaces\IItemRepo.cs" />
     <Compile Include="Mapper\CharacterMapper.cs" />
+    <Compile Include="Mapper\ItemMapper.cs" />
     <Compile Include="Models\CharacterInfo.cs" />
     <Compile Include="Models\CharacterPower.cs" />
     <Compile Include="Models\CharacterResist.cs" />
     <Compile Include="Models\CharacterStat.cs" />
     <Compile Include="Models\CharacterLoc.cs" />
     <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\Step.cs" />
     <Compile Include="Models\Quest.cs" />
     <Compile Include="Models\Spell.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CharacterRepo.cs" />
+    <Compile Include="Repositories\ItemRepo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
