--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <Compile Include="Interfaces\ICharacterRepo.cs" />
     <Compile Include="Interfaces\IItemRepo.cs" />
+    <Compile Include="Interfaces\IMapRepo.cs" />
     <Compile Include="Mapper\CharacterMapper.cs" />
     <Compile Include="Mapper\ItemMapper.cs" />
     <Compile Include="Models\CharacterInfo.cs" />
@@ -82,6 +83,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CharacterRepo.cs" />
     <Compile Include="Repositories\ItemRepo.cs" />
+    <Compile Include="Repositories\MapRepo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
