Map Get Area fonctionne

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -71,12 +71,14 @@
     <Compile Include="Interfaces\IMapRepo.cs" />
     <Compile Include="Mapper\CharacterMapper.cs" />
     <Compile Include="Mapper\ItemMapper.cs" />
-    <Compile Include="Models\CharacterInfo.cs" />
-    <Compile Include="Models\CharacterPower.cs" />
-    <Compile Include="Models\CharacterResist.cs" />
-    <Compile Include="Models\CharacterStat.cs" />
-    <Compile Include="Models\CharacterLoc.cs" />
+    <Compile Include="Mapper\Map\AreaMapper.cs" />
+    <Compile Include="Models\Character\CharacterInfo.cs" />
+    <Compile Include="Models\Character\CharacterPower.cs" />
+    <Compile Include="Models\Character\CharacterResist.cs" />
+    <Compile Include="Models\Character\CharacterStat.cs" />
+    <Compile Include="Models\Character\CharacterLoc.cs" />
     <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\Map\Area.cs" />
     <Compile Include="Models\Step.cs" />
     <Compile Include="Models\Quest.cs" />
     <Compile Include="Models\Spell.cs" />
