--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -69,7 +69,9 @@
     <Compile Include="Interfaces\ICharacterRepo.cs" />
     <Compile Include="Interfaces\IItemRepo.cs" />
     <Compile Include="Interfaces\IMapRepo.cs" />
+    <Compile Include="Interfaces\IQuestRepo.cs" />
     <Compile Include="Mapper\CharacterMapper.cs" />
+    <Compile Include="Mapper\QuestMapper.cs" />
     <Compile Include="Mapper\ItemMapper.cs" />
     <Compile Include="Mapper\Map\AreaMapper.cs" />
     <Compile Include="Models\Character\CharacterInfo.cs" />
@@ -79,13 +81,14 @@
     <Compile Include="Models\Character\CharacterLoc.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Models\Map\Area.cs" />
-    <Compile Include="Models\Step.cs" />
-    <Compile Include="Models\Quest.cs" />
+    <Compile Include="Models\Quest\QuestStep.cs" />
+    <Compile Include="Models\Quest\Quest.cs" />
     <Compile Include="Models\Spell.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CharacterRepo.cs" />
     <Compile Include="Repositories\ItemRepo.cs" />
     <Compile Include="Repositories\MapRepo.cs" />
+    <Compile Include="Repositories\QuestRepo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
