--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -67,10 +67,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\ICharacterRepo.cs" />
+    <Compile Include="Interfaces\IInfoRepo.cs" />
     <Compile Include="Interfaces\IItemRepo.cs" />
     <Compile Include="Interfaces\ILocalisatorRepo.cs" />
     <Compile Include="Interfaces\IMapRepo.cs" />
+    <Compile Include="Interfaces\IMobrepo.cs" />
+    <Compile Include="Interfaces\IPowerRepo.cs" />
     <Compile Include="Interfaces\IQuestRepo.cs" />
+    <Compile Include="Interfaces\IResistRepo.cs" />
+    <Compile Include="Interfaces\IStatRepo.cs" />
+    <Compile Include="Mapper\MobMapper.cs" />
     <Compile Include="Mapper\StatMapper.cs" />
     <Compile Include="Mapper\InfoMapper.cs" />
     <Compile Include="Mapper\QuestMapper.cs" />
@@ -79,10 +85,15 @@
     <Compile Include="Mapper\Map\AreaMapper.cs" />
     <Compile Include="Mapper\PowerMapper.cs" />
     <Compile Include="Mapper\ResistMapper.cs" />
+    <Compile Include="Models\Character.cs" />
+    <Compile Include="Models\Char\Hero.cs" />
+    <Compile Include="Models\Char\Mob.cs" />
+    <Compile Include="Models\Char\Pnj.cs" />
+    <Compile Include="Models\Info.cs" />
+    <Compile Include="Models\Localisator.cs" />
     <Compile Include="Models\Stat.cs" />
     <Compile Include="Models\Power.cs" />
     <Compile Include="Models\Resist.cs" />
-    <Compile Include="Models\Localisator.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Models\Map\Area.cs" />
     <Compile Include="Models\Quest\QuestStep.cs" />
@@ -90,10 +101,15 @@
     <Compile Include="Models\Spell.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CharacterRepo.cs" />
+    <Compile Include="Repositories\InfoRepo.cs" />
     <Compile Include="Repositories\ItemRepo.cs" />
     <Compile Include="Repositories\LocalisatorRepo.cs" />
     <Compile Include="Repositories\MapRepo.cs" />
+    <Compile Include="Repositories\MobRepo.cs" />
+    <Compile Include="Repositories\PowerRepo.cs" />
     <Compile Include="Repositories\QuestRepo.cs" />
+    <Compile Include="Repositories\StatRepo.cs" />
+    <Compile Include="Repositories\ResistRepo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
