--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -67,7 +67,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\ICharacterRepo.cs" />
+    <Compile Include="Interfaces\IHeroRepo.cs" />
     <Compile Include="Interfaces\IInfoRepo.cs" />
+    <Compile Include="Interfaces\IInventoryRepo.cs" />
     <Compile Include="Interfaces\IItemRepo.cs" />
     <Compile Include="Interfaces\ILocalisatorRepo.cs" />
     <Compile Include="Interfaces\IMapRepo.cs" />
@@ -101,7 +103,9 @@
     <Compile Include="Models\Spell.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CharacterRepo.cs" />
+    <Compile Include="Repositories\HeroRepo.cs" />
     <Compile Include="Repositories\InfoRepo.cs" />
+    <Compile Include="Repositories\InventoryRepo.cs" />
     <Compile Include="Repositories\ItemRepo.cs" />
     <Compile Include="Repositories\LocalisatorRepo.cs" />
     <Compile Include="Repositories\MapRepo.cs" />
