Remise en route

--- a/Ackeron_Back/appsettings.json
+++ b/Ackeron_Back/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Ackeron;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "default": "Data Source=127.0.0.1;Initial Catalog=Ackeron;User ID=SA;Password=0enggguS;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
- 
 }
