--- a/Ackeron_Back/appsettings.json
+++ b/Ackeron_Back/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "default": "Data Source=localhost;User ID=sa;Password=0enggguS;Initial Catalog=Ackeron;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "default": "Data Source=85.201.148.106;User ID=sa;Password=G@mal0sada;Initial Catalog=Ackeron;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
  
 }
